# rust-unilayer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  justfile
.github/workflows/: cron-daily-fuzz.yml
base58/: CHANGELOG.md  Cargo.toml  README.md
base58/src/: lib.rs
contrib/: release.sh  run_task.sh
fuzz/: Cargo.toml  README.md  generate-files.sh
fuzz/fuzz_targets/bitcoin/: deser_net_msg.rs  deserialize_address.rs  deserialize_block.rs  deserialize_prefilled_transaction.rs  deserialize_psbt.rs  deserialize_script.rs  deserialize_transaction.rs  deserialize_witness.rs  outpoint_string.rs  script_bytes_to_asm_fmt.rs
fuzz/fuzz_targets/hashes/: cbor.rs  json.rs  ripemd160.rs  sha1.rs  sha256.rs  sha512.rs  sha512_256.rs
fuzz/fuzz_targets/units/: deserialize_amount.rs
hashes/: Cargo.toml  README.md
hashes/embedded/: Cargo.toml
hashes/embedded/src/: main.rs
hashes/extended_tests/schemars/: Cargo.toml
hashes/src/: hash160.rs  hmac.rs  impls.rs  lib.rs  sha256t.rs  util.rs
internals/: CHANGELOG.md  Cargo.toml  README.md
internals/src/: lib.rs  macros.rs
internals/src/error/: input_string.rs  parse_error.rs
io/: Cargo.toml  README.md
io/src/: lib.rs
logo/: README.md
unilayer/: Cargo.toml
unilayer/embedded/: Cargo.toml
unilayer/embedded/src/: main.rs
unilayer/examples/: bip32.rs  ecdsa-psbt.rs  handshake.rs  sighash.rs  sign-tx-segwit-v0.rs  sign-tx-taproot.rs  taproot-psbt.rs
unilayer/src/: bip152.rs  bip158.rs  bip32.rs  error.rs  hash_types.rs  internal_macros.rs  lib.rs  network.rs  policy.rs  pow.rs  serde_utils.rs  sign_message.rs  string.rs  test_macros.rs
unilayer/src/address/: error.rs  mod.rs
unilayer/src/blockdata/: block.rs  constants.rs  fee_rate.rs  mod.rs  opcodes.rs  (+2 more)
unilayer/tests/: bip_174.rs  psbt-sign-taproot.rs  psbt.rs  serde.rs  serde_opcodes.rs
units/: Cargo.toml  README.md
units/src/: amount.rs  fee_rate.rs  lib.rs  weight.rs
(+37 files in other folders)
