[workspace]
members = ["unilayer", "hashes", "internals", "fuzz", "io", "units", "base58"]
resolver = "2"

[patch.crates-io.base58ck]
path = "base58"

[patch.crates-io.unilayer]
path = "unilayer"

[patch.crates-io.unilayer_hashes]
path = "hashes"

[patch.crates-io.unilayer-internals]
path = "internals"

[patch.crates-io.unilayer-io]
path = "io"

[patch.crates-io.unilayer-units]
path = "units"
