[package]
name = "unilayer-internals"
version = "0.2.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>", "The Rust Bitcoin developers", "The Rust UniLayer developers"]
license = "CC0-1.0"
repository = "https://github.com/UniLayerTeam/rust-unilayer/"
documentation = "https://docs.rs/bitcoin-internals"
description = "Internal types and macros used by rust-unilayer ecosystem"
categories = ["cryptography::cryptocurrencies"]
keywords = ["internal"]
readme = "README.md"
edition = "2021"
rust-version = "1.56.1"
exclude = ["tests", "contrib"]

[features]
default = []
std = ["alloc"]
alloc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { version = "1.0.103", default-features = false, optional = true }

[dev-dependencies]
