[package]
name = "unilayer-io"
version = "0.1.1"
authors = ["Matt Corallo <birchneutea@mattcorallo.com>"]
license = "CC0-1.0"
repository = "https://github.com/UniLayerTeam/rust-unilayer"
documentation = "https://docs.rs/bitcoin-io/"
description = "Simple I/O traits for no-std (and std) environments"
categories = ["no-std"]
keywords = [ "io", "no-std" ]
readme = "README.md"
edition = "2021"
rust-version = "1.56.1"
exclude = ["tests", "contrib"]

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
